--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ body {
 
 nav {
     width: 30%;
+ 
 }
 
 
 .list-navegacion {
-    width: 90%;
+    width: 100%;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -31,6 +32,7 @@ nav {
        border-style: solid;
        border-color: rgb(245, 146, 175);
        border-width: 1px;
+       box-sizing: border-box;
     } 
 a {
     text-decoration: none;
@@ -75,34 +77,6 @@ a:visited{
 
 
 
-@media (max-width: 799px)
-
-{
-    .container {
-        width: 95%;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-  
-    .form {
-        margin-top: 20px;
-        width: 100%;
-    }
-
-    .img {
-        border-bottom-right-radius: 0px;
-    }
-    .h1{
-        width: 95%;
-        flex-direction: column-reverse;
-        justify-content: center;
-    }
-    /* .arcana-h1{
-        width: 95%;
-        flex-direction: column-reverse;
-        justify-content: center;
-    } */
-}
 
 .container-img-info{
     width: 50%;
@@ -123,7 +97,7 @@ a:visited{
        height: auto;
        border-style: groove;
        border-color: #f2d0ad;
-       border-width: 2px;
+       /* border-width: 2px; */
        width: auto;
        height: auto;
       
@@ -216,4 +190,33 @@ footer {
     color: rgb(7, 7, 7);
     font-family: 'Dancing Script', cursive;
     text-align: right;
+}
+
+@media (max-width: 799px)
+
+{
+    .container {
+        width: 95%;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+  
+    .form {
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    .img {
+        border-bottom-right-radius: 0px;
+    }
+    .h1{
+        width: 95%;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    /* .arcana-h1{
+        width: 95%;
+        flex-direction: column-reverse;
+        justify-content: center;
+    } */
 }
