--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'ZCOOL QingKe HuangYou', cursive;
     margin: 0;
     padding: 0;
-    background-color: #f5e2cf;
+    background-color: #f2d0ad;
 }
 
 nav {
@@ -69,9 +69,7 @@ a:visited{
     margin-top: 100 px;
 }
 
-.container-img-info{
-    width: 50%;
-}
+
 .flexbox-space-around {
     display: flex;
     justify-content: space-around;
@@ -82,7 +80,7 @@ a:visited{
 .arcana-h1{
     font-family: 'Dancing Script', cursive;
     background-color: #f2d0ad;
-    font-size: 100px;
+    font-size: 5vw;
     text-align: center;
     color: #242121;
        height: auto;
@@ -105,12 +103,11 @@ h1 {
 
 .quienes-somos{
     background-color: #eedece;
-    border-left: 50px;
     display: flex;
-    /* flex-direction: row;
-    height: 30%;
-    width: 25%; */
+    flex-direction: row;
+    height: 10%;
     justify-content: space-around;
+    padding-top: 75px;
     padding-bottom: 100px;
 }
 
@@ -170,7 +167,7 @@ h1 {
 } 
 
 .bienvenida {
-    font-size: 20px;
+    font-size: 1em;
     
 }
 h2{
@@ -182,13 +179,13 @@ h2{
     font-size: 30px;
 }
 .img-seccion{
-    width: 300px;
-    height: 300px;
+    width: 20%;
+    height: 20%;
     border-radius:20px;
 }
 .img-brasil-argentina{
     
-    width: 100px;
+    width: 7%;
     
 }
  /* FOOTER */
@@ -201,8 +198,34 @@ footer {
     font-family: 'Dancing Script', cursive;
     text-align: right;
 }
-
-
+p{
+    display: inline;
+    text-align: start;
+    padding-left: 30px;
+}
+.p-footer{
+    text-align: right;
+}
+@media (max-width: 680px)
+{
+.quienes-somos{
+    background-color: #eedece;
+    display: none;
+    height: 10%;
+    padding-top: 75px;
+    padding-bottom: 100px;
+}
+{
+    .zapatos img{
+        display: flex;
+        flex-direction: column;
+        height: 30%;
+        width: 25%;
+        align-items: center;
+    } 
+    
+}
+}
 /* @media (max-width: 799px)
 
 {
@@ -217,18 +240,16 @@ footer {
         width: 100%;
     }
 
-   / .img {
+    .img {
         border-bottom-right-radius: 0px;
     } 
     .h1{
-        width: 95%;
+        width: auto;
         flex-direction: column-reverse;
         justify-content: center;
     }
-    /.arcana-h1{
-        width: 95%;
-        flex-direction: column-reverse;
+    .arcana-h1{
+        width: 100vw;
         justify-content: center;
     } 
-}
- */
+} */
