--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ body {
     padding: 0;
     background-color: #f2d0ad;
 }
-
+p{
+    /* display: inline; */
+    text-align: start;
+    padding-left: 30px;
+    font-size: 1em;
+}
 nav {
     width: 30%;
  
@@ -167,8 +172,7 @@ h1 {
 } 
 
 .bienvenida {
-    font-size: 1em;
-    
+    font-size: 1.5vw;
 }
 h2{
     padding: 0px;
@@ -184,8 +188,9 @@ h2{
     border-radius:20px;
 }
 .img-brasil-argentina{
-    
-    width: 7%;
+    width: 5vw;
+    height: 5vw;
+    border-radius:10px;
     
 }
  /* FOOTER */
@@ -198,22 +203,20 @@ footer {
     font-family: 'Dancing Script', cursive;
     text-align: right;
 }
-p{
-    display: inline;
-    text-align: start;
-    padding-left: 30px;
-}
+
 .p-footer{
     text-align: right;
+    font-size: 1.2vw;
 }
-@media (max-width: 680px)
+@media (max-width: 470px)
 {
 .quienes-somos{
     background-color: #eedece;
-    display: none;
+    display: flex;
     height: 10%;
     padding-top: 75px;
     padding-bottom: 100px;
+    font-size: 1em;
 }
 {
     .zapatos img{
@@ -225,6 +228,16 @@ p{
     } 
     
 }
+.seccion-info {
+    background-color: #eedece;
+    padding: 100px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+}
+
 }
 /* @media (max-width: 799px)
 
