--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ footer {
 
 .p-footer{
     text-align: right;
-    font-size: 1.2vw;
+    font-size: 80%;
 }
 
 
@@ -193,5 +193,8 @@ footer {
     justify-content: center;
     align-items: center;
 }
-
+.p-footer{
+    text-align: right;
+    font-size: 50%;
+}
 }
