--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ h1 {
     justify-content: space-around;
     justify-content: center;
     align-items: center;
+    padding-left: 3%;
 }
 
 
@@ -144,13 +145,21 @@ h2{
 .img-seccion{
     width: 20%;
     height: 20%;
+    border-style: groove;
     border-radius:20px;
+    border: 3px solid black;
+    
+    
     
 }
 .img-brasil-argentina{
+    align-items: center;
+    padding-top: auto;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 5vw;
     height: 5vw;
-    border-radius:10px;
+    border-radius: 60px;
     
 }
 
@@ -174,7 +183,19 @@ footer {
 }
 
 
-
+@media (max-width: 770px){
+    .img-brasil-argentina{
+        align-items: center;
+        padding-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 5vw;
+        height: 5vw;
+        border-radius: 60px;
+        
+    }
+    
+}
 
 @media (max-width: 470px)
 {
