--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ a:hover{
 .container-header {
     width: 100%;
     margin-top: 100 px;
+    
 }
 
 
@@ -75,6 +76,7 @@ a:hover{
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    z-index: 100;
 }
  /* TITULO */
 .arcana-h1{
@@ -143,7 +145,7 @@ h2{
     border-style: groove;
     border-radius:20px;
     border: 1.5px solid black;
-    transition: transform 150ms ease-in;
+    transition: transform 400ms ease-in-out;
     
 }
 
@@ -224,7 +226,7 @@ h2{
  .container-contacto img {
     width: 100%;
     height: 60px;
-    transition: transform 150ms ease-in;
+    transition: transform 300ms ease-in-out;
  }
 
 /* .img-brasil-argentina{
