--- a/style.css
+++ b/style.css
@@ -278,14 +278,25 @@ footer {
      */
 }
 
-@media (max-width: 470px)
+@media (max-width: 890px)
 {
     .img-seccion{
-        width: 50%;
+        width: 40%;
         height: 50%;
         border-radius:20px;
+        max-width: 30%;
+        max-height: 250px;
         
     }
+   /*  .img-seccion {
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 200px;
+        border-style: groove;
+        border-radius: 20px;
+        border: 1.5px solid black;
+        transition: transform 400ms ease-in-out;
+    } */
 .seccion-info {
     background-color: white;
     padding: 100px 0px;
@@ -316,6 +327,7 @@ footer {
         
     }
 }
+
 
 
 @media (min-width:527 max-width: 1000px)
