--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ h2{
     flex-direction: row;
     height: 10%;
     justify-content: space-around;
-    padding-top: 10px;
+    padding-top: 110px;
     padding-bottom: 200px;
 }
 
@@ -220,15 +220,26 @@ h2{
     text-align: center;
     padding-top: 40px;
     padding-bottom: 40px;
+  
 
 }
 
  .container-contacto img {
     width: 100%;
-    height: 60px;
+    height: 40px;
     transition: transform 300ms ease-in-out;
+    border-radius: 10px;
+
  }
 
+ .map h2{
+    margin-bottom: 50px;
+ }
+.conteiner-map{
+    height: 500px;
+    width: 100%;
+    text-align: center;
+}
 /* .img-brasil-argentina{
     align-items: center;
     padding-top: auto;
